Bug 626229 - fix trunk compilation with --disable-ogg,wave,webm - r=kinetik